<resources>
    <string name="app_name">Rent</string>
    <string name="title_home">Calendrier</string>
    <string name="title_dashboard">Locations</string>
    <string name="title_notifications">Paiements</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="global_operation_failed">Opération échouée!</string>
    <string name="global_add_succeeded">Ajout avec succée</string>
    <string name="global_empty_data_msg">Pas de données à afficher.</string>
    <string name="global_retry">Ressayer</string>

    <!-- MAIN -->
    <string name="default_calendar">Default calendar</string>
    <string name="open_calendar_dialog">Open calendar dialog</string>

    <string name="change_attributes_programmatically">Change attributes programmatically</string>

    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="range">Range</string>
    <string name="none">None</string>

    <!-- MENU -->
    <string name="select_all_fridays">Select All Fridays</string>
    <string name="unselect_all_fridays">Unselect All Fridays</string>
    <string name="select_three_months">Select Prev/Curr/Next Months</string>
    <string name="unselect_three_months">Unselect Prev/Curr/Next Months</string>
    <string name="clear_selections">Clear selections</string>
    <string name="log_selected_days">Log selected days</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enregistrer">Enregistrer</string>
    <string name="date">00–00–00</string>
    <string name="_00_00_00">00:00</string>

    <string name="title_activity_splash">Splash</string>
    <string name="trouver_location">Trouver location</string>
    <string name="add_rental_empty_locataire"> - </string>
    <string name="global_incorrect_information">Information Incorrectes</string>


    <string name="global_date_format">yyyy-MM-dd</string>
    <string name="global_slash_date_format">dd/MM/yyyy</string>
    <string name="last_connection_date_format">dd MMM yyyy</string>
    <string name="global_ok">OK</string>
    <string name="global_yes">OUI</string>
    <string name="global_no">NON</string>
    <string name="global_cancel">Annuler</string>
    <string name="global_delete">Supprimer</string>
    <string name="global_error">Erreur</string>

    <!--global error-->
    <string name="global_error_server">Une erreur est survenue. Merci de réessayer plus tard.</string>
    <string name="global_error_unavailable_network">Merci de vérifier votre connexion.</string>
    <string name="global_error_file_not_found">Le fichier sélectionné n\'existe pas.</string>
    <string name="global_unauthorized_error">Session expirée.</string>
    <string name="global_update_settings_error">Modification des paramètres échoué.</string>


    <string name="payment_dialog_empty_amount">Montant est vide.</string>

    <!--Payment list-->
    <string-array name="payment_list">
        <item>Avance</item>
        <item>Paiement</item>
    </string-array>

    <!--House list-->
    <string-array name="house_list">
        <item>RDC</item>
        <item>Etage 1</item>
        <item>Etage 2</item>
    </string-array>

    <string name="rental_text_house">Maison</string>

    <string name="global_date_string_format">%1$d-%2$d-%3$d</string>
    <string name="global_time_string_format">%1$d:%2$d</string>
    <string name="global_amount">Montant</string>
    <string name="dialog_payment_type">Type :</string>
    <string name="global_x">X</string>
    <string name="global_detail_locataire">Detail Locataire</string>
    <string name="global_identity_cart">Carte identité</string>
    <string name="global_name_surname">Nom et prénom</string>
    <string name="global_phones">Téléphones</string>
    <string name="global_phone">Téléphone</string>
    <string name="global_locataire">Locataire</string>

    <string name="global_wrong_phone">Téléphone incorrect</string>
    <string name="global_wrong_locataire">Locataire incorrect</string>
    <string name="global_wrong_rental_details">Date/maison indisponible</string>
    <string name="global_no_data_to_display">Pas de données à afficher</string>
    <string name="global_update_successful">Mise à jour succée</string>
    <string name="payment_successful">Paiement avec succée</string>
    <string name="delete_successful">Suppression avec succée</string>
    <string name="rental_details_update_rental">Modifier location</string>
    <string name="global_date">DATE</string>
    <string name="global_change_color">Changer le couleur</string>
    <string name="global_rental_details">Detail Location</string>
    <string name="rental_detail_update_locataire">Modifier Locataire</string>
    <string name="global_from">De:</string>
    <string name="global_to">A:</string>
    <string name="add_rental">Ajouter Location</string>
    <string name="global_finish">Terminer</string>
    <string name="global_new_rental">Nouveau Location</string>
    <string name="global_calendar">Calendrier</string>
    <string name="global_payments">Paiements</string>
    <string name="global_rentals">Locations</string>


    <string name="payment_dialog_amount_text">%1$d ( %2$s )</string>
    <string name="global_firebase_error">Synchronisation échoué</string>
    <string name="global_alert">Alert</string>
    <string name="global_upload">Upload</string>
    <string name="global_download">Télécharger</string>
    <string name="global_synchronise">Synchroniser avec le serveur</string>

    <string name="rentals_synchronised">Locations synchronisés</string>
    <string name="payments_synchronised">Paiments synchronisé</string>
    <string name="locataires_synchronised">Locataires synchroniseé</string>
    <string name="dialog_phone_title">Taper le N° pour appeler</string>

    <string name="no_data_to_be_uploaded">Vous n\'avez pas des données à uploader</string>
    <string name="rental_detail_payment_list">List Paiements</string>

</resources>
