<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtclose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_margin="2dp"
                android:background="@drawable/cerclebackground"
                android:gravity="center"
                android:text="@string/global_x"
                android:textColor="@color/backgroundColor"
                android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="5dp"

                    android:gravity="center"
                    android:text="@string/dialog_payment_type"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundColor"
                    android:textColorHint="#9FE7E0E0"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/types_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="5dp"
                    android:background="@android:color/black"
                    android:backgroundTint="#F0EEEEEE"
                    android:contextClickable="false"
                    android:entries="@array/payment_list"
                    android:gravity="center"
                    android:scrollbarSize="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_amount"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/global_amount"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/backgroundColor"
                android:textColorHint="#99EBDDDD"
                android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"

                    android:text="@string/_00_00_00"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundColor"
                    android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageDate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/calendaricon" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"

                    android:text="@string/_00_00_00"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundColor"
                    android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageTime"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/clockicon" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/savePayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/enregistrer"
                android:textColor="@color/backgroundColor" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>